# applet

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  MANIFEST.in  README.md  nginx.conf  vimrc
backend/algorithm/arithmetic_analysis/: bisection.py  bisection_demo.py
backend/patterns/: __init__.py
backend/src/: requirements.txt  run.py  setup.cfg  setup.py
backend/src/app/: clear.py  run.py  settings.py  urls.py
backend/src/app/adapter/: __init__.py  base.py  database.py  result.py  table.py
backend/src/app/check/: data.py  ram.py  speed.py
backend/src/app/docs/: MiniProgram-API.md  api.raml
backend/src/app/driver/: base.py  mongo.py  mysql.py
backend/src/app/utils/: base.py  decorator.py  net.py  test.py
backend/src/app/v1/: urls.py
backend/src/app/v1/conf/: policy.csv
backend/src/app/v1/controllers/: base.py  user.py
backend/src/app/v1/handlers/: base.py  user.py
backend/src/app/v1/models/: base.py  user.py  userticket.py
backend/src/app/v1/parameter/: _enum.py
backend/src/app/v1/parameter/controllers/: user.py
backend/src/app/v1/parameter/handlers/: _input.py  _output.py
backend/src/app/v1/parameter/models/: _object.py
backend/src/app/v1/serializers/: base.py  user.py
backend/src/app/v1/utils/: attime.py  casbin.py
backend/tests/: api_test.md  test.py  test_descriptor.py
