[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[tool:pytest]
addopts = -ra -q
log_cli=true
log_level=WARNING

[flake8]
ignore = E501
exclude = docs,.git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 14

[build_sphinx]
# project = Edgebox Streaming
# version = 0.1
# release = 0.1.0
source-dir = docs/source
build-dir = docs/build
all_files = 1

